# XGui

./: .gitignore  CMakeLists.txt  GNUmakefile  project  readme.md
src/: XGuiApplication.h  XGuiApplication.m  XGuiFont.h  XGuiFont.m  XGuiLabel.h  XGuiLabel.m  XGuiWidget.h  XGuiWidget.m  XGuiWindow.h  XGuiWindow.m  helpers.h  helpers.m  main.h  main.m
xstuff/: delete  delete.c  hello  hello.c  hello1  hello1.c  plist.m  resize  resize.c  tell  tell.c  test  test.c  text  text.c  xft.c
